added p5js boilerplate

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             <div class="k-row">
                 <div class="k-col k-4">
                     <a href="/matrix-16x8/index.html">Matrix 16x8</a>
+                    <a href="/p5js-demo/index.html">P5.js Demo</a>
                 </div>
             </div>
         </div>
