got basic midi playing capibilities

--- a/public/clocky/index.html
+++ b/public/clocky/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" media="all" href="styles.css"></link>
 
         <script src="/node_modules/osc/dist/osc-browser.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/webmidi"></script>
         <script src="main.js"></script>
     </head>
 
