made matrix grid embeddable

--- a/public/sqcr-demo/html/matrix-16x8.html
+++ b/public/sqcr-demo/html/matrix-16x8.html
@@ -167,9 +167,10 @@
             <div class="k-col k-c-16 k-center blank-box k-16"></div>
         </div>
     </div>
-    <div>
-        <a href="javascript:sqcr.start()">start</a>
-        <a href="javascript:sqcr.stop()">stop</a>
+    <div class="k-row">
+        <div class="k-col k-c-16">
+            <a class="icon-link" href="javascript:sqcrToggle()">&#9654;</a>
+        </div>
     </div>
     <script>
         window.initViz()
