--- a/public/sqcr-demo/html/akai.html
+++ b/public/sqcr-demo/html/akai.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="all" href="/public/matrix-16x8/styles.css"></link>
     <link rel="stylesheet" type="text/css" media="all" href="/public/sqcr-demo/styles.css"></link>
+
     <script src="/src/Markov.js"></script>
     <script src="/node_modules/webmidi/webmidi.min.js"></script>
     <script src="/node_modules/tonal/build/transpiled.js"></script>
@@ -31,36 +32,20 @@ img {
 </head>
 <body>
     <div class='img-container'>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Roland_TR-808_%28large%29.jpg/1024px-Roland_TR-808_%28large%29.jpg"/>
+        <img src="http://www.oldschooldaw.com/forums/index.php?action=dlattach;topic=2254.0;attach=5275;image"/>
     </div>
     <script>
-    loop('kicks', async ctx => {
+    loop('vox', async ctx => {
         const pulse = beatFromTick(ctx.tick);
         // Switch pattern on the 0
         if (pulse === 0) kick_pattern = _sample(kicks);
         if (!kick_pattern[pulse]) return ctx.sleep(T / 4);
 
-        // Play kick beat
-        playInst(sampler, NOTE_KICK);
+        // Play sample
+        const voxSampleNote = _sample(THUG)
+        playInst(sampler, voxSampleNote, 4000);
 
         ctx.sleep(T / 4);
-    });
-
-    loop('hats', async ctx => {
-        hats_pattern = hats[MC_HATS.peekID()];
-        max = hats_pattern[1];
-        t = hats_pattern[0];
-
-        playInst(sampler, NOTE_HAT);
-
-        if (h_counter >= max - 1) {
-            MC_HATS.next();
-            h_counter = 0;
-        } else {
-            h_counter++;
-        }
-
-        ctx.sleep(t);
     });
 
     loop('snares', async ctx => {
@@ -71,6 +56,7 @@ img {
         playInst(sampler, NOTE_CLAP);
         ctx.sleep(T / 4);
     });
+
     sqcr.start();
     </script>
 </body>
